--- a/index.html
+++ b/index.html
@@ -51,5 +51,107 @@
         </article>
 
     </section>
+
+    <!-- section 3 -->
+    <section class="section3">
+        <div class="article-container">
+                <div>
+                    <header class="article-title">Features you will<br> love & enjoy</header>
+                    <p class="article-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+                </div>
+                
+                <div class="shadow-box">
+                    <header class="shadow-header">Dexktop & Mobile Version</header>
+                    <p class="shadow-p">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                </div>
+                <div class="shadow-box">
+                    <header class="shadow-header">Drag & Drop Builder</header>
+                    <p class="shadow-p">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                </div>
+                <div class="shadow-box">
+                    <header class="shadow-header">Awesome Modern Design</header>
+                    <p class="shadow-p">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                </div>
+                <div class="shadow-box">
+                    <header class="shadow-header">Super Easy to Edit</header>
+                    <p class="shadow-p">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                </div>
+        </div>
+        <div class="image-container">
+            <img src="images/architect.png" alt="">
+            <button class="large-button"><span class="buttonXL">10+Year</span><br>
+                <span class="buttonL">Experience</span></button>
+        </div>
+    </section>
+    <!-- section 4 -->
+    <section class="section4">
+        <header>Some Facts</header>
+        <p>There are many variations of passages of Lorem Ipsum available, but<br> the majority have suffered alteration.</p>
+        <div class="fact-icons">
+            <div class="icon">
+                <img src="images/icons/ribon.png" alt="">
+                <h3>54</h3>
+                <p>Award Winnings</p>
+            </div>
+            <div class="icon">
+                <img src="images/icons/projects.png" alt="">
+                <h3>1458</h3>
+                <p>Projects Finished</p>
+            </div>
+            <div class="icon">
+                <img src="images/icons/customers.png" alt="">
+                <h3>590</h3>
+                <p>Clients Worked</p>
+            </div>
+            <div class="icon">
+                <img src="images/icons/email.png" alt="">
+                <h3>22578</h3>
+                <p>Email Send</p>
+            </div>
+        </div>
+
+    </section>
+    <!-- section 5 -->
+    <section class="section5">
+        <header>Our Sponspors</header>
+        <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p>
+        <div class="sponsors">
+            <img src="images/sponsors/spotify.png" alt="">
+            <img src="images/sponsors/amazon.png" alt="">
+            <img src="images/sponsors/google.png" alt="">
+            <img src="images/sponsors/telerama.png" alt="">
+            <img src="images/sponsors/figma.png" alt="">
+        </div>
+    </section>
+    <!-- additional section -->
+    <section class="about-us">
+        <p class="about-us-header">
+            <strong>About Us</strong>
+        </p>
+        <div class="about-us-container">
+            <div class="dev">
+                <img src="images/staff-1.jpg" alt=" ">
+                <p class="dev-name">
+                    Fahim
+                </p>
+            </div>
+            <div class="dev">
+                <img src="images/staff-2.jpg" alt=" ">
+                <p class="dev-name">
+                    Srijon
+                </p>
+            </div>
+            <div class="dev">
+                <img src="images/staff-3.jpg" alt=" ">
+                <p class="dev-name">
+                    Hasan
+                </p>
+            </div>
+        </div>
+    </section>
+    <!-- footer -->
+    <footer>
+        <p class="footer-p">All rights reserved copyright@2023 startup landing page design</p>
+    </footer>
 </body>
 </html>
