--- a/index.html
+++ b/index.html
@@ -150,8 +150,8 @@
         </div>
     </section>
     <!-- footer -->
-    <footer>
-        <p class="footer-p">All rights reserved copyright@2023 startup landing page design</p>
+    <footer class="footer">
+        <p>All rights reserved copyright@2023 startup landing page design</p>
     </footer>
 </body>
 </html>
